# atc_rl_api

./: .dockerignore  .gitignore  ATC_COMMAND_REFERENCE.md  Dockerfile  README.md  REWARD_FUNCTION_SPEC.md  debug_run.py  inference.py  main.py  openenv.yaml  package-lock.json  problem.md  pyproject.toml  requirements.txt  run_api.py  run_server.py  run_ui.py  test_prompts.py  tests_telemetry.py  train_ppo.py  verify_base_env.py  verify_spawning.py
.sisyphus/: boulder.json
.sisyphus/plans/: atc_rl_env_implementation.md
airports/: AIRP.json  ANTA.json  HEAT.json  VOCB.json
api/: config_handler.py  main.py  schemas.py
core/: aircraft.py  constants.py  engine.py  routes.py
rl_env/: Dockerfile  README.md  __init__.py  atc_gym.py  client.py  environment.py  inference.py  inference_verbose.py  models.py  openenv.yaml  requirements.txt
rl_env/parsers/: __init__.py  command_parser.py
rl_env/prompts/: __init__.py  atc_prompt.py
rl_env/rubrics/: __init__.py  base.py  compliance.py  composite.py  departure.py  efficiency.py  safety.py
rl_env/tasks/: __init__.py  base.py  departure.py  mixed_operations.py  multi_departure.py  single_approach.py  single_departure.py  storm_traffic.py  traffic_pattern.py
rl_env/tests/: conftest.py  test_competition_real.py  test_environment.py  test_llm_commands_real.py  test_llm_episodes_real.py  test_openenv_real.py  test_parsers.py  test_redundancy.py  test_rewards_real.py  test_rubrics.py  test_tasks.py
scripts/: clear_config.py
server/: app.py
visualizer/: index.html  package-lock.json  package.json  pnpm-lock.yaml
visualizer/public/: favicon.svg:Zone.Identifier
visualizer/src/: App.jsx  index.css  mockData.js
visualizer/src/components/: AdminOverlay.jsx  AdminPanel.jsx  DevConsole.jsx  FlightModal.jsx  FlightRoster.jsx  RadarMap.jsx  RouteSidebar.jsx  TelemetryPanel.jsx
visualizer/src/utils/: geo.js
viz/: radar_ui.py
