[project]
name = "atc-rl-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "numpy>=2.4.4",
    "openenv-core>=0.2.3",
    "pydantic>=2.12.5",
    "pygame>=2.6.1",
    "requests>=2.33.1",
    "torch>=2.11.0",
    "uvicorn>=0.43.0",
]
